crates/lucard_domain/src/snapshots/lucard_domain__context__tests__update_image_tool_calls_preserves_error_flag.snap
---
source: crates/lucard_domain/src/context.rs
expression: actual
---
messages:
  - tool:
      name: error_tool
      call_id: call1
      output:
        is_error: true
        values:
          - text: "[The image with ID 0 will be sent as an attachment in the next message]"
  - text:
      role: User
      content: "[Here is the image attachment for ID 0]"
  - image:
      url: "data:image/png;base64,test123"
      mime_type: image/png
